# DancingLinksX

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alg_x.py  board.py  dev-requirements-freeze.txt  dev-requirements.in  dl_matrix.py  dlmatrix.py  initial_board.txt  nqueens.py  pyproject.toml  requirements-freeze.txt  requirements.in  setup.cfg  sudoku.py  sudoku_board.py
dlx/: __init__.py  alg_x.py  dlmatrix.py
examples/: nqueens.py
examples/sudoku/: sudoku.py  sudoku_board.py
