[project]
name = "dlx"
version = "0.1.0"
description = "Pure python implementation of Dancing Links and Algorithm X"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
examples = ["numpy>=2.2.3"]

[dependency-groups]
dev = ["mypy>=1.15.0", "pre-commit>=4.1.0", "ruff>=0.9.9", "pdbp>=1.6.1"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I"] # TODO enable D

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
